Fixed spacing errors on buttons that resulted in over lapping navbar

--- a/client/src/components/Home_Page/Pick_List_Btn/PickListBtn.css
+++ b/client/src/components/Home_Page/Pick_List_Btn/PickListBtn.css
@@ -2,7 +2,7 @@
     margin: 20px auto;
     background: radial-gradient(circle, #1a6e27, #083d10, #041c07 );
     width: 100%;
-    height: 10rem;
+    height: 7rem;
     color: seashell;
     text-align: center;
     text-shadow: 2px 2px black;
