--- a/client/src/components/Home_Page/Store_Btn/StoreBtn.css
+++ b/client/src/components/Home_Page/Store_Btn/StoreBtn.css
@@ -2,7 +2,7 @@
     margin: 20px auto;
     background: radial-gradient(circle, #0b1eb0, #0f185c, #041c07 );
     width: 100%;
-    height: 10rem;
+    height: 7rem;
     color: seashell;
     text-align: center;
     text-shadow: 2px 2px black;
